third_party/rust/chromium_crates_io/vendor/cxx-1.0.150/tests/ui/empty_enum.stderr
error: explicit #[repr(...)] is required for enum without any variants
 --> tests/ui/empty_enum.rs:3:5
  |
3 |     enum A {}
  |     ^^^^^^^^^
